--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -61,10 +61,9 @@
 
 .button{
     border-radius: 10px;
-    background: white;
-    margin:0px;
-    padding: 15px;
-    color: dodgerblue;
+    background: lightseagreen;
+    padding: 10px;
+    color: white;
     display: block;
-    text-decoration: none;
+    width: 275px;
 }
