some CSS changes, stuck on button disable

--- a/client/src/css/bookservice.css
+++ b/client/src/css/bookservice.css
@@ -33,3 +33,11 @@ button{
     display: block;
     width: 275px;
 }
+
+button:hover {background-color: #3e8e41}
+
+button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
