--- a/client/src/css/bookservice.css
+++ b/client/src/css/bookservice.css
@@ -12,7 +12,7 @@ button{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
     border-radius: 10px;
     margin-top:10px;
     margin-left: 3px;
@@ -25,9 +25,17 @@ button{
     text-align: center;
 }
 
+/* .link-button:hover {background-color: #3e8e41}
+
+.link-button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+} */
+
 button{
     border-radius: 10px;
-    background: lightseagreen;
+    background: rgb(247, 86, 86);
     padding: 10px;
     color: white;
     display: block;
