--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -8,7 +8,7 @@
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     padding: 15px;
-    justify-content: left;
+    justify-content: center;
     font-size: 70px;
     font-weight:800;
     margin-top: 0;
@@ -43,6 +43,10 @@
     border-style: outset;
     border-color: buttonborder;
     border-image: initial;
+}
+
+.main-nav ul>li>a:hover{
+    background-color: lightgray;
 }
 
 .button{
