--- a/client/src/css/servicecustomerlist.css
+++ b/client/src/css/servicecustomerlist.css
@@ -15,7 +15,7 @@
     text-align: center;
 } */
 
-.servicecustomerdetails > a{
+.servicecustomerlistitem{
     border-radius: 10px;
     background: rgb(163, 216, 248);
     padding: 10px;
@@ -25,20 +25,21 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     border-radius: 10px;
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
     padding: 0px;
     list-style:inherit;
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
 }
 
-.servicecustomerdetails > a:hover{
+.servicecustomerlistitem>Link:hover{
     color: blue;
 }
+
 
 /* .link-button >li> a{
     border-radius: 10px;
