--- a/client/src/css/form.css
+++ b/client/src/css/form.css
@@ -46,7 +46,7 @@ input[type=text],[type=number]{
     font-size: 20px;
 }
 
-input[type=submit]{
+/* input[type=submit]{
     padding:10px;
     border:0;
     box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
@@ -56,7 +56,7 @@ input[type=submit]{
     width: 425px;
     background-color: lightgray;
     font-size: 20px;
-}
+} */
 
 select {
     padding:10px;
