--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -110,3 +110,30 @@ input[type="date"]{
 ::-webkit-calendar-picker-indicator{
     background-color: white;
 }
+
+
+input[type="submit"] {
+	box-shadow: 0px 0px 0px 2px #9fb4f2;
+	background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+	background-color:#7892c2;
+	border-radius:11px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:19px;
+	padding:12px 44px;
+	text-decoration:none;
+	text-shadow:0px 0px 0px #283966;
+    margin-top: 20px;
+    width: 300px;
+}
+input[type="submit"]:hover {
+	background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+	background-color:#476e9e;
+}
+input[type="submit"]:active {
+	position:relative;
+	top:1px;
+}
