--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -1,6 +1,6 @@
 .header{
     background-color: DodgerBlue;
-    min-height: 230px;
+    min-height: 250px;
 }
 
 .title{
@@ -9,13 +9,14 @@
     font-family: Arial, Helvetica, sans-serif;
     padding: 15px;
     justify-content: center;
-    font-size: 70px;
+    font-size: 80px;
     font-weight:800;
     margin-top: 0;
     margin-bottom: 20px;
     margin-left: 40px;
     padding-top: 30px;
-    text-decoration: underline;
+
+    text-shadow: 2px 2px 4px #000000;
 }
 
 .main-nav > ul {
